fixed again responsive navigation bar because I was having problem with the body not overflowing

--- a/_compass/_layout.scss
+++ b/_compass/_layout.scss
@@ -1,9 +1,9 @@
 /********* 
 Nav bar and off canvas navigation
-Start setting .container with hidden overflow
+Start setting .outer-wrapper with hidden overflow
 *********/
 
-body {
+.outer-wrapper {
 	overflow: hidden; 
 }
 
@@ -46,16 +46,18 @@ and CSS transitions enabled browsers
 
 .js.csstransforms {
 	@include breakpoint($break-nav){
+		#wrapper {
+			@include transition(transform, 0.5s, ease-in-out);
+			&.is-open {
+				@include translateX((-1)*$off-canvas-width, $perspective);
+			}//slide wrapper div to the left when menu is toggled
+		}//#wrapper
 		#top-bar {
 			position: absolute;
 			width: $off-canvas-width;
 			left: 100%;//position off-canvas menu out of screen
 			top: 0;
 			bottom: 0;
-			@include transition(transform, 0.5s, ease-in-out);
-			&.is-open {
-				@include translateX((-1)*$off-canvas-width, $perspective);
-			}//slide off-canvas menu open when menu is toggled
 			.nav-links {
 				float:none;
 				li {
@@ -63,12 +65,6 @@ and CSS transitions enabled browsers
 				}//li
 			}//.navlinks
 		}//#top-bar
-		#main {
-			@include transition(transform, 0.5s, ease-in-out);
-			&.is-open{
-				@include translateX((-1)*$off-canvas-width, $perspective);
-			}//slide main content along with menu
-		}//#main
 		#menu-toggle {
 			display:inline-block;
 		}//#menu-toggle
